
  HCAT-182 Web services interface for HCatalog access and Pig, Hive, and MR job execution (ctdean, Rachel Gollub, and thejas via gates)

  HCAT-328 HCatLoader should report its input size so pig can estimate the number of reducers (traviscrawford via gates)

  HCAT-427 Document storage-based authorization (lefty via gates)

  IMPROVEMENTS
  HCAT-487 HCatalog should tolerate a user-defined amount of bad records (traviscrawford)

  HCAT-488 TestHCatStorer should extend HCatBaseTest so it uses junit4 and runs inside an IDE (traviscrawford)

  HCAT-486 HCatalog should use checkstyle to enforce coding style (traviscrawford)

  HCAT-484 HCatalog should use ql.metadata Table and Partition classes (traviscrawford)

  HCAT-485 Document that storage-based security ignores GRANT/REVOKE statements (lefty via khorgath)

  HCAT-442 Documentation needs update for using HCatalog with pig (lefty via gates)

  HCAT-482 Document -libjars from HDFS for HCat with MapReduce (lefty via gates)

  HCAT-481 Fix CLI usage syntax in doc & revise HCat docset (lefty via khorgath)

  HCAT-444 Document reader & writer interfaces (lefty via gates)

  HCAT-425 Pig cannot read/write SMALLINT/TINYINT columns (traviscrawford)

  HCAT-460 Enable boolean to integer conversions (traviscrawford)

  HCAT-450 HCatalog should use transitive ivy dependencies (traviscrawford)

  HCAT-350 Writing BINARY data to HCatRecord depends on a Hive class (thejas via traviscrawford)

  HCAT-440 pig field names for arrays should be configurable (traviscrawford)

  HCAT-434 Package HCatalog pig support as a separate jar (traviscrawford)

  HCAT-341 InitializeInput improvements (traviscrawford)

  HCAT-439 Unit test failures in trunk build - Jenkins build 1516 (avandana)

  HCAT-426 HCatalog should log with slf4j everywhere (traviscrawford via khorgath)

  HCAT-389 hcat_ping (script to check if HCatalog server is running/reachable) (mithun via khorgath)

  HCAT-432 Add findbugs to build (rohini via avandana)
